<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".WelcomeScreen">

    <ImageView
        android:layout_width="211dp"
        android:layout_height="297dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/miaudota"
        android:textColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarWelcome"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/bluecachorro"
        android:translationZ="5dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/logarEmail"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/btnRegisterWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg_trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        app:layout_constraintWidth_percent=".8" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/facebook"
        android:elevation="35dp"
        android:src="@drawable/facebook"
        app:backgroundTint="#0FACEB"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterWelcome"
        app:tint="@null"
        android:contentDescription="@string/floating_facebook" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:tint="@null"
        android:src="@drawable/google"
        app:borderWidth="0dp"
        android:elevation="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterWelcome"
        android:contentDescription="@string/floating_google" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter"
        android:elevation="35dp"
        android:src="@drawable/twitter"
        app:borderWidth="0dp"
        app:maxImageSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterWelcome"
        app:tint="@null"
        android:contentDescription="@string/floating_twitter" />

</androidx.constraintlayout.widget.ConstraintLayout>